BO: Fix shadow visibility for module cards

--- a/admin-dev/themes/new-theme/scss/pages/_product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_product_page.scss
@@ -716,6 +716,10 @@
       }
     }
 
+    .module-item-wrapper-grid {
+      box-shadow: 0 1px 4px 0 rgba(0,0,0,.25);
+    }
+
     .module-render-container {
       margin-bottom: $grid-gutter-width;
 
